<resources>
    <string name="app_name">SQLite_Compra_autos</string>
    <string name="splash_image" />
    <string name="main_textView_0">Correo:</string>
    <string name="main_textView_1">Contrasenia:</string>
    <string name="main_plainText_0" />
    <string name="main_plainText_1" />
    <string name="main_button_0">INGRESAR</string>
    <string name="main_button_1">NUEVO USUARIO</string>
    <string name="main_autoCompleteTextView_0" />
    <string name="nuevoUsuario_textView_0">Ingresa tu nombre:</string>
    <string name="nuevoUsuario_plainText_0" />
    <string name="nuevoUsuario_textView_1">Ingresa tu correo:</string>
    <string name="nuevoUsuario_plainText_1" />
    <string name="nuevoUsuario_textView_2">Ingresa tu contrasenia:</string>
    <string name="nuevoUsuario_editText_2" />
    <string name="nuevoUsuario_button_0">REGISTRARME</string>
    <string name="adminUser_textView_0">Ingresa la marca del auto:</string>
    <string name="adminUser_editText_0" />
    <string name="adminUser_textView_1">Ingresa el nombre del automovil:</string>
    <string name="adminUser_editText_1" />
    <string name="adminUser_textView_2">Ingresa el precio del auto:</string>
    <string name="adminUser_editText_2" />
    <string name="adminUser_button_0">AGREGAR AUTOMOVIL</string>
    <string name="adminUser_button_1">VER TODOS LOS CLIENTES</string>
    <string name="adminUser_button_2">VER CLIENTE Y SUS COMPRAS</string>
    <string name="adminUser_editText_3" />
    <string name="adminUser_textView_3">Ingresa el Id del cliente que deseas ver:</string>
    <string name="adminUser_button_3">RECUPERAR TODOS LOS CLIENTES</string>
    <string name="adminUser_button_4">RECUPERAR TODOS LOS AUTOMOVILES</string>
    <string name="comprarAutos_textView_0">Ingresa el id del auto que deseas comprar:</string>
    <string name="comprarAutos_editText_0" />
    <string name="comprarAutos_button_0">COMPRAR AUTO</string>
    <string name="main_textView3">PARA FINES PRACTICOS, UTILIZA EL USUARIO Y CONTRASENIA= admin admin  PARA ACCEDER A LAS OPCIONES CORRESPONDIENTE A LA TAREA</string>
</resources>
