<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoUsuario">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevoUsuario_textView_0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nuevoUsuario_plainText_0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevoUsuario_textView_1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nuevoUsuario_plainText_1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevoUsuario_textView_2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nuevoUsuario_editText_2" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevoUsuario_button_0" />
</LinearLayout>